// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button Card The render function shows the next button 1`] = `
<Styled(MuiBox)
  pt={2.5}
>
  <WithStyles(ForwardRef(Paper))
    elevation={3}
  >
    <WithStyles(ForwardRef(Button))
      buttonRef={[Function]}
      className="button CORRECT"
      focusRipple={false}
      onClick={[Function]}
      type="submit"
    >
      <WithStyles(ForwardRef(Typography))
        variant="h6"
      >
        Next
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Paper))>
</Styled(MuiBox)>
`;

exports[`The Button Card The render function shows the submit button 1`] = `
<Styled(MuiBox)
  pt={2.5}
>
  <WithStyles(ForwardRef(Paper))
    elevation={3}
  >
    <WithStyles(ForwardRef(Button))
      buttonRef={[Function]}
      className="button DEFAULT"
      focusRipple={false}
      onClick={[Function]}
      type="submit"
    >
      <WithStyles(ForwardRef(Typography))
        variant="h6"
      >
        Submit
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Paper))>
</Styled(MuiBox)>
`;
